src/objects/Ter_POS__c.object
<CustomObject>
    <fields>
        <fullName>Ter_Codigo_DIAN__c</fullName>
        <label>Código DIAN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_IDFidelizacionTienda__c</fullName>
        <label>ID Fidelización Tienda</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_Negocio_Complementario__c</fullName>
        <label>Negocio Complementario</label>
        <referenceTo>Ter_Negocio_Complementario__c</referenceTo>
        <relationshipLabel>POS</relationshipLabel>
        <relationshipName>Ter_POS</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ter_Usuario__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Usuario</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Ter_POS</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>POS</label>
    <nameField>
        <label>Nombre POS</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ter_POS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>